# app-stardew-accounting

./: .env  .env-dev  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  setenv.sh
.github/workflows/: veracode.yml
alembic/: env.py
alembic/versions/: 1c7ab22bc8b9_create_database_tables.py  5b87b45c0039_create_database_tables.py
frontend/: main.py
src/: __init__.py  app.py  routes.py
src/accounting/: entities.py  enum.py  models.py  routes.py
src/core/: database.py  settings.py
src/database/: autodiscovery.py  entity.py  metadata.py  repository.py
